--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
 
     <link rel="manifest" href="/manifest.json" />
 
-    <link
-      rel="shortcut icon"
-      type="image/png"
-      href="/public/assets/icon-only.png"
-    />
+    <link rel="shortcut icon" type="image/png" href="/assets/icon-only.png" />
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
